# windows-service-repro

./: .gitignore  Cargo.toml  README.md
src/: main.rs
